change index layout

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,19 +2,17 @@
 layout: page
 ---
 {%- assign items = site.data[site.data.theme.metadata] -%}
+
+{% include index/browse-collections.html %}
 <div class="row">
   <div class="col-md-8">
 
-    {% include index/description.html %}
-    {% include index/carousel.html%}
+
     
     </div>
   <div class="col-md-4">  
 
-    {% include index/time.html %}
-    {% include index/subjects.html %}
-    {% include index/locations-sm.html %}
-    {% include index/objects.html %}
+    
 
   </div>
 
