--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -5,12 +5,8 @@ layout: page
 
 {% include index/browse-collections.html %}
 <div class="row">
-  <div class="col-md-8">
-
-
-    
-    </div>
-  <div class="col-md-4">  
+  <div class="col-md-12">
+    {% include index/featured-collections.html %}
 
     
 
