--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -13,9 +13,9 @@
 </style>
 <div id="home-banner" class="jumbotron jumbotron-fluid mb-0 p-0" aria-label="{{ site.data.theme.home-banner-image-title }}">
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-center">
-            <div id="home-title-box" class="col-md-6 text-center">
+            <div id="home-title-box" class="col-md-8 text-center">
                 <div class="input-group input-group-lg">
                     <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Find a collection" > 
                     <div class="input-group-append">
