--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -1,17 +1,17 @@
 <div class="container">
-    <div class="row pt-3 align-items-center">
+    <div class="row py-3 align-items-center">
         <!-- logo -->
         <div class="col-9">
             <a id="banner-home" title="University of Idaho Digital Collections" class="" href="{{ '/' | relative_url }}">
-                <img class="img-fluid lib-logo-lg" src="https://www.lib.uidaho.edu/media/images/ui_library_horizontal.png" alt=""></a>
+                <img class="img-fluid lib-logo-lg" src="https://www.lib.uidaho.edu/digital/bannerlogo_gray_bottom.png" alt=""></a>
         </div>
         <!-- quick search -->
-        <div class="col-3 float-right text-right d-none d-md-block">
+        <!--<div class="col-3 float-right text-right d-none d-md-block">
             {% include nav-search-cdm.html %}
-        </div>
+        </div>-->
     </div>
 </div>
-
+<!--{% comment %}
 <div class="container">
     <div class="row justify-content-center">
         <nav class="navbar navbar-expand-md {{ site.data.theme.navbar-color }} {{ site.data.theme.navbar-background }} nav-overlap col-11">
@@ -46,3 +46,4 @@
         </nav>
     </div>
 </div>
+{% endcomment %}-->
