--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -1,7 +1,7 @@
 ---
 layout: page 
 ---
-{%- assign items = site.data[site.data.theme.metadata] -%}
+{%- assign collections = site.data.digital_all_collections -%}
 {%- assign fields = site.data.browse-config -%}
 
 {{ content }}
@@ -15,31 +15,42 @@ layout: page
                 <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>    
             </div>
         </div>
-        <span class="info2 h2"><span id="numberOf">{{ items | size }}</span> of {{ items | size }} items</span>
+        <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} items</span>
     </div>
 </div>
 
 <div class="row" id="browseItems">
-    {% for item in items %}
-    <div class="item col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-2" >
-        <div class="card">
-            {%- assign extension = item.format | strip | split: '/' | last | downcase -%}
-            {%- if item.format contains 'image' -%}
-            <a href="{% include item-link.html %}">
-                <img class="card-img-top lazyload" {% if forloop.index < 10 %}src={%else%}data-original={%endif%}"{% include image/medium.html %}" alt="Image of {{ item.title | escape }}">           
-            </a>
+    {% for c in collections %}
+    <div class="item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3" >
+        <a href="{{ c.website }}">
+            <div class="card square" style="background-image: url('{{ c.image }}')">
+                <div class="card-img-overlay d-inline-flex align-items-center justify-content-center">
+                    <h5 class="card-title text-white text-center py-2">{{ c.colltitle }}</h5>
+                </div>
+            </div>
+        </a>
+    </div>
+
+<!--{% comment %}
+                <div class="card-body text-center">
+                    <div class="card-text">
+                        <a href="{{ c.website }}">
+                        <img class="card-img-top lazyload" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">           
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+                                        
             {%- endif -%}
             <div class="card-body text-center search">
-                <h3 class="card-title"><a href="{% include item-link.html %}" class="text-dark">{{ item.title }}</a></h3>
+                <h3 class="card-title"><a href="{% include item-link.html %}" class="text-dark">{{ c.colltitle }}</a></h3>
                 <p class="card-text">
-                    {% if item.date %}<strong>Date:</strong> {{ item.date }}{% endif %}
+                    {% if c.datestart %}<strong>Date:</strong> {{ c.datestart }}{% endif %}
                     {% if site.data.theme.mediatypes contains ";" %}<br><small>Type: <a href="{{ extension | prepend: '/browse.html#' | relative_url }}" class="filter">{{ extension | upcase }} <span class="far {% if item.format contains 'image' %}fa-image{% elsif item.format contains 'audio' %}fa-file-audio{% elsif item.format contains 'video' %}fa-file-video{%else%}fa-file{% endif %}"></span></a></small>{% endif %}
                 </p>
-                {%- unless item.format contains 'image' -%}
-                <p>
-                    <a href="{% include item-link.html %}"><img class="thumb lazyload" data-original="{% include image/thumb.html %}" alt="item thumbnail"></a>
-                </p>
-                {%- endunless -%}
+{% endcomment %}-->
+                <!--
                 <p>
                     {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ item[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
                     {%- assign btns = btns | split: ';' | compact -%}
@@ -56,8 +67,9 @@ layout: page
                 <p>
                     <a href="{% include item-link.html %}" class="btn btn-clearwater" title="link to {{ item.title | escape }}">View Item</a>
                 </p>
+               
             </div>
         </div>
-    </div>
+    </div> -->
     {% endfor %}
 </div>
