cdil projects on homepage

--- a/_includes/index/cdil-projects.html
+++ b/_includes/index/cdil-projects.html
@@ -1,4 +1,6 @@
-<div class="row tumblr text-white">
+<div class="row">
+    <h3>CDIL Digital Scholarship Projects &nbsp&nbsp<small class="text-muted"><a href="https://cdil.lib.uidaho.edu">MORE...</a></small></h3>
+    <!--{% comment %}
     <h2 style="color:white;">CDIL Digital Scholarship Projects</h2>
     {% for project in site.data.cdil %}
     <div class="col-lg-4 col-sm-6 centered">
@@ -8,4 +10,10 @@
         <h3 class="name"><a target="_blank" href="{{ project.link }}">{{ project.title }}</a></h3>
     </div>
     {% endfor %}
+    {% endcomment %}-->
+</div>
+<div class="row">
+    <div class="card-deck" id="cdilInner">
+
+    </div>
 </div>
