--- a/_includes/index/browse-collections.html
+++ b/_includes/index/browse-collections.html
@@ -1,42 +1,55 @@
-<div class="row justify-content-center">
-    <div class="col-md-10">
-        <h3>Browse Collections</h3>
-        <p>Subjects:
-            <a href="collections.html#Agriculture" class="vocab Agriculture" data-filter="Agriculture">Agriculture</a>
-            <a href="collections.html#Dams" class="vocab Dams" data-filter="Dams">Dams</a>
-            <a href="collections.html#Fire" class="vocab Fire" data-filter="Fire">Fire</a>
-            <a href="collections.html#Forests" class="vocab Forests" data-filter="Forests">Forests</a>
-            <a href="collections.html#IJC" class="vocab IJC" data-filter="IJC">Jazz</a>
-            <a href="collections.html#Labor" class="vocab Labor" data-filter="Labor">Labor</a>
-            <a href="collections.html#Maps" class="vocab Maps" data-filter="Maps">Maps</a>
-            <a href="collections.html#Mining" class="vocab Mining" data-filter="Mining">Mining</a>
-            <a href="collections.html#NativeAmericans" class="vocab NativeAmericans" data-filter="NativeAmericans">Native Americans</a>
-            <a href="collections.html#Rangeland" class="vocab Rangeland" data-filter="Rangeland" name="Rangeland">Rangeland</a>
-            <a href="collections.html#Sports" class="vocab Sports" data-filter="Sports">Sports</a>
+<div class="row">
+    <h3>Browse</h3>
+</div>
+<div class="row py-3">
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body text-center">
+                <h5 class="card-title">Locations:</h5>
+                <a href="collections.html#Campus" class="btn btn-secondary btn-sm my-2 Campus" data-filter="Campus">UI Campus</a>
+                <a href="collections.html#Idaho" class="btn btn-secondary btn-sm my-2 Idaho" data-filter="Idaho">Idaho</a>
+                <a href="collections.html#Latah" class="btn btn-secondary btn-sm my-2 Latah" data-filter="Latah">Latah County</a>
+                <a href="collections.html#Moscow" class="btn btn-secondary btn-sm my-2 Moscow" data-filter="Moscow">Moscow</a>
+                <a href="collections.html#Northwest" class="btn btn-secondary btn-sm my-2 Northwest" data-filter="Northwest">Northwest</a>
+                <a href="collections.html#Potlatch" class="btn btn-secondary btn-sm my-2 Potlatch" data-filter="Potlatch">Potlatch</a>
+                <a href="collections.html#UI" class="btn btn-secondary btn-sm my-2 UI" data-filter="UI">University of Idaho</a>
+            </div>
+        </div>
+    </div>
 
-            <a href="collections.html#UIResearch" class="vocab UIResearch" data-filter="UIResearch">UI Research</a>
-            <a href="collections.html#Water" class="vocab Water" data-filter="Water">Water</a>
-            <a href="collections.html#Wilderness" class="vocab Wilderness" data-filter="Wilderness">Wilderness</a>
-        </p>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body text-center">
+                <h5 class="card-title">Subjects:</h5>
+                <a href="collections.html#Agriculture" class="btn btn-secondary btn-sm my-2 Agriculture" data-filter="Agriculture">Agriculture</a>
+                <a href="collections.html#Agriculture" class="btn btn-secondary btn-sm my-2 Agriculture" data-filter="Agriculture">Agriculture</a>
+                <a href="collections.html#Dams" class="btn btn-secondary btn-sm my-2 Dams" data-filter="Dams">Dams</a>
+                <a href="collections.html#Fire" class="btn btn-secondary btn-sm my-2 Fire" data-filter="Fire">Fire</a>
+                <a href="collections.html#Forests" class="btn btn-secondary btn-sm my-2 Forests" data-filter="Forests">Forests</a>
+                <a href="collections.html#IJC" class="btn btn-secondary btn-sm my-2 IJC" data-filter="IJC">Jazz</a>
+                <a href="collections.html#Labor" class="btn btn-secondary btn-sm my-2 Labor" data-filter="Labor">Labor</a>
+                <a href="collections.html#Maps" class="btn btn-secondary btn-sm my-2 Maps" data-filter="Maps">Maps</a>
+                <a href="collections.html#Mining" class="btn btn-secondary btn-sm my-2 Mining" data-filter="Mining">Mining</a>
+                <a href="collections.html#NativeAmericans" class="btn btn-secondary btn-sm my-2 NativeAmericans" data-filter="NativeAmericans">Native Americans</a>
+                <a href="collections.html#Rangeland" class="btn btn-secondary btn-sm my-2 Rangeland" data-filter="Rangeland" name="Rangeland">Rangeland</a>
+                <a href="collections.html#Sports" class="btn btn-secondary btn-sm my-2 Sports" data-filter="Sports">Sports</a>
+                <a href="collections.html#UIResearch" class="btn btn-secondary btn-sm my-2 UIResearch" data-filter="UIResearch">UI Research</a>
+                <a href="collections.html#Water" class="btn btn-secondary btn-sm my-2 Water" data-filter="Water">Water</a>
+                <a href="collections.html#Wilderness" class="btn btn-secondary btn-sm my-2 Wilderness" data-filter="Wilderness">Wilderness</a>
+            </div>
+        </div>
+    </div>
 
-        <p>Locations:
-
-            <a href="collections.html#Campus" class="vocab Campus" data-filter="Campus">UI Campus</a>
-            <a href="collections.html#Idaho" class="vocab Idaho" data-filter="Idaho">Idaho</a>
-            <a href="collections.html#Latah" class="vocab Latah" data-filter="Latah">Latah County</a>
-
-            <a href="collections.html#Moscow" class="vocab Moscow" data-filter="Moscow">Moscow</a>
-            <a href="collections.html#Northwest" class="vocab Northwest" data-filter="Northwest">Northwest</a>
-            <a href="collections.html#Potlatch" class="vocab Potlatch" data-filter="Potlatch">Potlatch</a>
-            <a href="collections.html#UI" class="vocab UI" data-filter="UI">University of Idaho</a>
-
-            <p>Media Type:
-
-                <a href="collections.html#Audio" class="vocab Audio" data-filter="Audio">Audio</a>
-                <a href="collections.html#Documents" class="vocab Documents" data-filter="Documents">Documents</a>
-                <a href="collections.html#Maps" class="vocab Maps" data-filter="Maps">Maps</a>
-                <a href="collections.html#Photographs" class="vocab Photographs" data-filter="Photographs">Photographs</a>
-                <a href="collections.html#Video" class="vocab Video" data-filter="Video">Video</a>
-            </p>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body text-center">
+                <h5 class="card-title">Media Type:</h5>
+                <a href="collections.html#Audio" class="btn btn-secondary btn-sm my-2 Audio" data-filter="Audio">Audio</a>
+                <a href="collections.html#Documents" class="btn btn-secondary btn-sm my-2 Documents" data-filter="Documents">Documents</a>
+                <a href="collections.html#Maps" class="btn btn-secondary btn-sm my-2 Maps" data-filter="Maps">Maps</a>
+                <a href="collections.html#Photographs" class="btn btn-secondary btn-sm my-2 Photographs" data-filter="Photographs">Photographs</a>
+                <a href="collections.html#Video" class="btn btn-secondary btn-sm my-2 Video" data-filter="Video">Video</a>
+            </div>
+        </div>
     </div>
 </div>
