--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -1,13 +1,27 @@
 ---
 layout: page
 ---
-{%- assign items = site.data[site.data.theme.metadata] -%}
 
-{% include index/browse-collections.html %}
-<div class="row">
+<div class="row py-3">
   <div class="col-md-12">
     {% include index/featured-collections.html %}
   </div>
+</div>
 
-  
+<div class="row py-3">
+  <div class="col-md-12">
+    {% include index/campus-collections.html %}
+  </div>
+</div>
+
+<div class="row py-3">
+  <div class="col-md-12">
+    {% include index/browse-collections.html %}
+  </div>
+</div>
+
+<div class="row py-3">
+  <div class="col-md-12">
+    {% include index/cdil-projects.html %}
+  </div>
 </div>
