change column width

--- a/_includes/js/cdil-js.html
+++ b/_includes/js/cdil-js.html
@@ -6,7 +6,7 @@
     cdilItems.sort(function() { return 0.5 - Math.random() });
     var i;
     for (i=0; i < 3; i++) {
-        card = "<div class='col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 my-3 text-center'><div class='card'><img class='card-img-top' src=" + cdilItems[i].image + " alt='Card image cap'><div class='card-body'><h5 class='card-title'>" + cdilItems[i].title + "</h5><p class='card-text'>" + cdilItems[i].description + "</p><a href='" + cdilItems[i].website + "' class='btn btn-primary'>View Project</a></div></div>";
+        card = "<div class='card text-center'><img class='card-img-top' src=" + cdilItems[i].image + " alt='Card image cap'><div class='card-body'><h4 class='card-title'><a href='" + cdilItems[i].website + "'>" + cdilItems[i].title + "</a></h4><p class='card-text'>" + cdilItems[i].description + "</p></div><div class='card-footer'><a href='" + cdilItems[i].website + "' class='btn btn-clearwater'>View Project</a></div></div>";
         cdilImage.innerHTML += card;
     }
 </script>
