--- a/_includes/index/cdil-projects.html
+++ b/_includes/index/cdil-projects.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>CDIL Digital Scholarship Projects &nbsp&nbsp<small class="text-muted"><a href="https://cdil.lib.uidaho.edu">MORE...</a></small></h3>
+    <h3>CDIL Digital Scholarship Projects &nbsp&nbsp<small class="text-muted"><a href="https://cdil.lib.uidaho.edu" target="_blank" rel="noopener">MORE...</a></small></h3>
     <!--{% comment %}
     <h2 style="color:white;">CDIL Digital Scholarship Projects</h2>
     {% for project in site.data.cdil %}
@@ -12,7 +12,7 @@
     {% endfor %}
     {% endcomment %}-->
 </div>
-<div class="row">
+<div class="row py-3">
     <div class="card-deck" id="cdilInner">
 
     </div>
