--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -12,7 +12,6 @@
 }
 </style>
 <div id="home-banner" class="jumbotron jumbotron-fluid mb-0 p-0" aria-label="{{ site.data.theme.home-banner-image-title }}">
-
     <div class="container">
         <div class="row justify-content-center">
             <div id="home-title-box" class="col-md-8 text-center">
@@ -20,12 +19,31 @@
                     <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Find a collection" > 
                     <div class="input-group-append">
                         <button class="btn btn-clearwater" type="button" title="Search" alt="Search" id="goButton" >Search</button>
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" data-backdrop="false">Browse</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div class="nav flex-sm-column flex-row">
+                                <a class="nav-item nav-link active" href="#">Home</a>
+                                <a href="#" class="nav-item nav-link">Link</a>
+                                <a href="#" class="nav-item nav-link">Link</a>
+                                <a href="#" class="nav-item nav-link">Link</a>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>         
     </div>
+    
     <div class="text-right p-1"><small><a style="background:rgb(0,0,0,.5);padding:.5em" class="text-info" href="{% if site.data.theme.home-banner-image-number %}{{ site.data.theme.home-banner-image-number | prepend: site.data.theme.metadata | prepend: '/items/' | prepend: site.baseurl | append: '.html' }}{% else %}{{ site.data.theme.home-banner-image-link }}{% endif %}">Featured Image</a></small></div>
 </div>
 
