--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,20 @@
             <li class="nav-item">
                 <a class="nav-link sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link sidebar-nav-item{% if page.url == '/about.html' %} active{% endif %}" href="{{ '/about.html' | relative_url }}/">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link sidebar-nav-item{% if page.url == '/browse.html' %} active{% endif %}" href="{{ '/browse.html' | relative_url }}/">Browse</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link sidebar-nav-item{% if page.url == '/timeline.html' %} active{% endif %}" href="{{ '/timeline.html' | relative_url }}/">Timeline</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link sidebar-nav-item{% if page.url == '/locations.html' %} active{% endif %}" href="{{ '/locations.html' | relative_url }}/">Locations</a>
+            </li>
+            
+
 
             {% comment %}
             The code below dynamically generates a sidebar nav of pages with
