--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -1,4 +1,4 @@
-<nav class="py-2 navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="py-2 navbar navbar-default navbar-expand-md navbar-dark sticky-top">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#page-nav" aria-controls="page-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,3 +41,4 @@
         </div>
     </div>
 </nav>
+
