--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,11 +1,5 @@
 {% if page.layout == "home-infographic" %}
 <style>
-#home-banner {
-    background-image: url('{% if site.data.theme.home-banner-image-number %}{{ site.data.theme.cdm-url }}/digital/iiif/{{ site.data.theme.cdm-collection-id }}/{{ site.data.theme.home-banner-image-number }}/full/max/0/default.jpg{% else %}{{ site.data.theme.home-banner-image-link }}{% endif %}');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: {{ site.data.theme.home-banner-image-position | default: top }};
-}
 #home-title-box {
     padding-top: 12em;
     padding-bottom: 12em;
@@ -24,7 +18,7 @@
                 </div>
             </div>
 
-            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!--<div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
@@ -40,11 +34,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>-->
         </div>         
     </div>
     
-    <div class="text-right p-1"><small><a style="background:rgb(0,0,0,.5);padding:.5em" class="text-info" href="{% if site.data.theme.home-banner-image-number %}{{ site.data.theme.home-banner-image-number | prepend: site.data.theme.metadata | prepend: '/items/' | prepend: site.baseurl | append: '.html' }}{% else %}{{ site.data.theme.home-banner-image-link }}{% endif %}">Featured Image</a></small></div>
+    <div id="feature-image" class="text-right p-1"></div>
 </div>
 
 {%- endif -%}
