--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,15 +2,13 @@
 <script src="{{ '/js/jquery-3.4.1.min.js' | prepend: site.digital-assets }}"></script>
 <script src="{{ '/js/bootstrap.bundle.min.js' | prepend: site.digital-assets }}"></script>
 <!-- load other js -->
-{% if page.layout == "browse" %}{% include js/browse-js.html %}
-{% endif %}
-{% if page.layout == "data" %}{% include js/table-js.html %}{% endif %}
+{% if page.layout == "browse" %}{% include js/browse-js.html %}{% endif %}
 {% if page.layout == "subjects" %}{% include js/subjects-js.html %}{% endif %}
 {% if page.layout == "locations" %}{% include js/locations-js.html %}{% endif %}
 {% if page.layout == "timeline" %}{% include js/timeline-js.html %}{% endif %}
 {% if page.layout == "map" %}{% include js/map-js.html %}{% endif %}
 {% if layout.gallery == true %}{% include js/gallery-js.html %}{% endif %}
-{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/cdil-js.html %}{% include js/campus-js.html %}{% endif %}
+{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/cdil-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}{% endif %}
 {% if page.layout == "item" %}{% include js/arrow-page-control-js.html %}{% endif %}
 <script defer src="{{ '/fontawesome/js/all.min.js' | prepend: site.digital-assets }}"></script>
 <script>
