--- a/_includes/index/featured-collections.html
+++ b/_includes/index/featured-collections.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <h3>Featured Collections</h3>
+    <div class="col-md-12 text-center">
+        <h3>Featured Collections</h3>
+    </div>
 </div>
-<div class="row" id="featuredInner">
-
-</div>
+<div class="row" id="featuredInner"></div>
