--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -1,75 +1,64 @@
 ---
-layout: page 
+layout: page
 ---
 {%- assign collections = site.data.digital_all_collections -%}
 {%- assign fields = site.data.browse-config -%}
 
 {{ content }}
 
-<div class="row mb-3 justify-content-center">
-    <div class="col-md-8 text-center">
-        <div class="input-group input-group-lg">
-            <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... " > 
-            <div class="input-group-append">
-                <button class="btn btn-success" type="button" title="Search" alt="Search" id="goButton" >Search</button>
-                <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>    
-            </div>
-        </div>
-        <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} items</span>
-    </div>
-</div>
+<div class="container">
 
-<div class="row" id="browseItems">
-    {% for c in collections %}
-    <div class="item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3" >
-        <a href="{{ c.website }}">
-            <div class="card square" style="background-image: url('{{ c.image }}')">
-                <div class="card-img-overlay d-inline-flex align-items-center justify-content-center">
-                    <h5 class="card-title text-white text-center py-2">{{ c.colltitle }}</h5>
+    <div class="row mb-3 justify-content-center">
+        <div class="col-md-8 text-center">
+            <div class="input-group input-group-lg">
+                <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... ">
+                <div class="input-group-append">
+                    <button class="btn btn-success" type="button" title="Search" alt="Search" id="goButton">Search</button>
+                    <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>
                 </div>
             </div>
-        </a>
+            <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} items</span>
+        </div>
     </div>
 
-<!--{% comment %}
-                <div class="card-body text-center">
-                    <div class="card-text">
-                        <a href="{{ c.website }}">
-                        <img class="card-img-top lazyload" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">           
-                        </a>
+    <div class="row">
+        <div class="col-md-3">
+            {% include index/browse-collections.html %}
+        </div>
+        <div class="col-md-9">
+            <div class="row" id="browseItems">
+            {% for c in collections %}
+            <div class="item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3">
+                <div class="card">
+                    <a href="{{ c.website }}">
+                        <img class="card-img-top lazyload" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
+                    </a>
+                    <div class="card-body text-center search">
+                        <h3 class="card-title"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h3>
+                        <p class="card-text">
+
+                        </p>
+                        <p>
+                            {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
+                            {%- assign btns = btns | split: ';' | compact -%}
+                            {% for b in btns %}{% if b !=" " and b != "" %}
+                            <a class="btn btn-sm btn-secondary m-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">{{ b }}</a>
+                            {% endif %}{% endfor %}
+                        </p>
+                        <p class="card-text">
+                            {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
+                            {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
+                            {% unless forloop.last %}<br>{% endunless %}
+                            {% endif %}{% endif %}{% endfor %}
+                        </p>
+                        <p>
+                            <a href="{{ c.website }}" class="btn btn-clearwater" title="link to {{ c.colltitle | escape }}">View Item</a>
+                        </p>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-                                        
-            {%- endif -%}
-            <div class="card-body text-center search">
-                <h3 class="card-title"><a href="{% include item-link.html %}" class="text-dark">{{ c.colltitle }}</a></h3>
-                <p class="card-text">
-                    {% if c.datestart %}<strong>Date:</strong> {{ c.datestart }}{% endif %}
-                    {% if site.data.theme.mediatypes contains ";" %}<br><small>Type: <a href="{{ extension | prepend: '/browse.html#' | relative_url }}" class="filter">{{ extension | upcase }} <span class="far {% if item.format contains 'image' %}fa-image{% elsif item.format contains 'audio' %}fa-file-audio{% elsif item.format contains 'video' %}fa-file-video{%else%}fa-file{% endif %}"></span></a></small>{% endif %}
-                </p>
-{% endcomment %}-->
-                <!--
-                <p>
-                    {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ item[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
-                    {%- assign btns = btns | split: ';' | compact -%}
-                    {% for b in btns %}{% if b !=" " and b != "" %}
-                    <a class="btn btn-sm btn-secondary m-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">{{ b }}</a> 
-                    {% endif %}{% endfor %} 
-                </p>
-                <p class="card-text">
-                    {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if item[f.field] %}
-                    {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ item[f.field] | truncatewords: 20 | replace: '""','"' }}
-                    {% unless forloop.last %}<br>{% endunless %}  
-                    {% endif %}{% endif %}{% endfor %}
-                </p>
-                <p>
-                    <a href="{% include item-link.html %}" class="btn btn-clearwater" title="link to {{ item.title | escape }}">View Item</a>
-                </p>
-               
-            </div>
         </div>
-    </div> -->
-    {% endfor %}
+    </div>
 </div>
