--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,7 @@
 <script src="{{ '/js/jquery-3.4.1.min.js' | prepend: site.digital-assets }}"></script>
 <script src="{{ '/js/bootstrap.bundle.min.js' | prepend: site.digital-assets }}"></script>
 <!-- load other js -->
-{% if page.layout == "browse" %}{% include js/browse-js.html %}{% endif %}
+{% if page.layout == "browse" %}{% include js/browse-js.html %}{% include js/page-sidebar-js.html %}{% endif %}
 {% if page.layout == "subjects" %}{% include js/subjects-js.html %}{% endif %}
 {% if page.layout == "locations" %}{% include js/locations-js.html %}{% endif %}
 {% if page.layout == "timeline" %}{% include js/timeline-js.html %}{% endif %}
