--- a/_includes/js/featured-js.html
+++ b/_includes/js/featured-js.html
@@ -5,7 +5,10 @@
     featuredItems.sort(function() { return 0.5 - Math.random() });
     var i;
     for (i=0; i < 4; i++) {
-        image = "<div class='background col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 my-3'><a href='" + featuredItems[i].website + "'><div class='card square' style='background-image: url(" + featuredItems[i].image + ")'><div class='card-body'><h5 class='card-title text-white text-center py-2'>" + featuredItems[i].title + "</h5></div></div></a></div>";
+        image = "<div class='background col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 my-3'><a href='" + featuredItems[i].website + "'><div class='card square' style='background-image: url(" + featuredItems[i].image + ")'><div class='card-body'></div></div></a></div>";
         featuredImage.innerHTML += image;
     }
 </script>
+
+<!--card titles-->
+<!--<h5 class='card-title text-white text-center py-2'>" + featuredItems[i].title + "</h5>-->
