--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -86,7 +86,7 @@ dt {
 .square {
     height: 0;
     width: 100%;
-    padding-bottom: 100%;
+    height: 20vh;
     background-size: cover;
     background-position: center;
     /* box-shadow: 0 3px 12px rgba(#2d2d2e, .9); */
