arrange cdil and campus

--- a/_includes/index/cdil-projects.html
+++ b/_includes/index/cdil-projects.html
@@ -1,8 +1,6 @@
-<div class="row">
+<div class="row justify-content-center">
     <h3>CDIL Digital Scholarship Projects &nbsp&nbsp<small class="text-muted"><a href="https://cdil.lib.uidaho.edu" target="_blank" rel="noopener">MORE...</a></small></h3>
 </div>
-<div class="row py-3">
-    <div class="card-deck" id="cdilInner">
+<div class="row justify-content-center" id="cdilInner">
 
-    </div>
 </div>
