--- a/_includes/index/campus-collections.html
+++ b/_includes/index/campus-collections.html
@@ -1,7 +1,6 @@
-<div class="row">
+<div class="row justify-content-center">
     <h3>Campus Collections</h3>
 </div>
-
-<div class="row" id="campusInner">
+<div class="row justify-content-center" id="campusInner">
 
 </div>
