--- a/_includes/js/campus-js.html
+++ b/_includes/js/campus-js.html
@@ -1,12 +1,14 @@
 {%- assign campus = site.data.digital_all_collections | where: "type","CampusCollection" -%}
 
 <script> 
-        var campusItems = [ {% for c in campus %}{ "title": {{ c.colltitle | jsonify }}, "image": "{{ c.image }}", "website": "{{ c.website }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
-        var campusImage = document.getElementById("campusInner");
-        campusItems.sort(function() { return 0.5 - Math.random() });
-        var i;
-        for (i=0; i < 3; i++) {
-            image = "<div class='item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3'><a href='" + campusItems[i].website + "'><div class='card square' style='background-image: url(" + campusItems[i].image + ")'><div class='card-img-overlay d-inline-flex align-items-center justify-content-center'><h5 class='card-title text-white text-center py-2'>" + campusItems[i].title + "</h5></div></div></a></div>";
-            campusImage.innerHTML += image;
-        }
-    </script>
+    var campusItems = [ {% for c in campus %}{ "title": {{ c.colltitle | jsonify }}, "image": "{{ c.image }}", "website": "{{ c.website }}", "description": "{{ c.shortdesc }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
+    var campusImage = document.getElementById("campusInner");
+    campusItems.sort(function() { return 0.5 - Math.random() });
+    var i;
+    for (i=0; i < 3; i++) {
+        card = "<div class='col-md-10 my-3'><div class='card text-center'><img class='card-img-top' src=" + campusItems[i].image + " alt='Card image cap'><div class='card-body'><h4 class='card-title'><a href='" + campusItems[i].website + "'>" + campusItems[i].title + "</a></h4><p class='card-text'>" + campusItems[i].description + "</p></div><div class='card-footer'><a href='" + campusItems[i].website + "' class='btn btn-clearwater'>View Project</a></div></div></div>";
+        campusImage.innerHTML += card;
+    }
+</script>
+
+<!--<h5 class='card-title text-white text-center py-2'>" + campusItems[i].title + "</h5>-->
