--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -89,15 +89,22 @@ dt {
     height: 20vh;
     background-size: cover;
     background-position: center;
-    /* box-shadow: 0 3px 12px rgba(#2d2d2e, .9); */
+    opacity: 1;
+    transition: 0.3s;
 }
 
-.background .card-title {
+.square .card-body {
     background:rgba(37, 36, 36, 0.829);
     position: absolute;
     left: 0;
     bottom: 0;
     right: 0;
+    top: 0;
+    visibility:hidden;
+}
+
+.square:hover .card-body {
+    visibility:visible;
 }
 
 .card-img-top {
