--- a/_includes/js/featured-js.html
+++ b/_includes/js/featured-js.html
@@ -1,6 +1,7 @@
 {%- assign featured = site.data.digital_all_collections -%}
+
 <script> 
-    var featuredItems = [ {% for f in featured %}{ "title": {{ f.colltitle | jsonify }}, "image": "{{ f.image }}", "website": "{{ f.website }}", "description": "{{ f.shortdesc }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
+    var featuredItems = [ {% for f in featured %}{% if f.status == 'featured' %}{ "title": {{ f.colltitle | jsonify }}, "image": "{{ f.image }}", "website": "{{ f.website }}", "description": "{{ f.shortdesc }}" }{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}];
     var featuredImage = document.getElementById("featuredInner");
     featuredItems.sort(function() { return 0.5 - Math.random() });
     var i;
