--- a/_includes/browse-nav.html
+++ b/_includes/browse-nav.html
@@ -1,7 +1,9 @@
 {% assign filters = site.data.browsebuttons %}
 
-<div id="sidebar" class="py-3 border-right d-none d-md-block pl-3">
-    <nav id="page-nav">
+<div id="sidebar" class="py-3 border-right d-none d-md-block pl-5">
+    <h3 class="pt-3">Search by:</h3>
+    <hr>
+    <nav id="sidenav">
         <ul class="list-unstyled components">
             <li class="border-bottom py-2 pl-1 pr-4">
                 <a href="#locations" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Locations</a>
