--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ layout: default
                   Filter Collections <span class="fas fa-chevron-down"></span>
               </button>
               <!-- page nav / sidebar -->
-              {% include browse-nav.html %}
+              {% include sidebar.html %}
           </div>
           <!-- page -->
           <div class="page-block col-md-10 col-xs-12">
