--- a/_includes/index/locations.html
+++ b/_includes/index/locations.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-4">
         {%- assign topLocations = page.featured-places | split: ";" -%}
-        {% for l in topLocations %}<a class="btn btn-sm btn-outline-secondary m-1" href="{{ l | strip | uri_escape | prepend: '/browse.html#' | absolute_url }}">{{ l | strip }}</a><br>
+        {% for l in topLocations %}<a class="btn btn-sm btn-outline-secondary m-1" href="{{ l | strip | uri_escape | prepend: '/collections.html#' | absolute_url }}">{{ l | strip }}</a><br>
         {% endfor %}
       </div>
     </div>
